# timer-cli

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  demo.tape
.github/workflows/: release.yml
assets/: demo.tape
src/: main.rs
