[package]
name = "timer"
version = "0.1.0"
edition = "2024"
authors = ["Danylo Vitkovskyi <x3665107@gmail.com>"]
description = "A simple CLI timer application using crossterm and tokio"
license = "MIT"
repository = "https://github.com/DanikVitek/timer-cli"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
crossterm = { version = "0.29", default-features = false, features = [
    "windows",
    "event-stream",

] }
futures-core = "0.3"
futures-util = "0.3.31"
human-errors = "0.1"
tokio = { version = "1.45", features = [
    "time",
    "rt",
    "macros",
    "sync",
] }
