[package]
name = "timer"
version = "0.1.2"
edition = "2024"
authors = ["Danylo Vitkovskyi <x3665107@gmail.com>"]
description = "A simple CLI timer application using crossterm and tokio"
license = "MIT"
repository = "https://github.com/DanikVitek/timer-cli"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = "limited"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", default-features = false, features = [
    "windows",
    "event-stream",

] }
futures-core = "0.3"
futures-util = "0.3"
human-errors = "0.1"
tokio = { version = "1.45", features = ["time", "rt", "macros", "sync"] }
